--- a/public/templates/partials/sidebar.hbs
+++ b/public/templates/partials/sidebar.hbs
@@ -1,10 +1,10 @@
 <nav class="navbar">
     <ul class="nav flex-column nav-pills">
         <li class="nav-item">
-            <a class="nav-link" href="/dashboard">Dashboard</a>
+            <a class="nav-link" href="/profile">Profile</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/profile">Profile</a>
+            <a class="nav-link" href="/users">Users</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="/logout">Logout</a>
